--- a/pages/headerQuickView.html
+++ b/pages/headerQuickView.html
@@ -61,7 +61,7 @@
 									{{ currencie.symbol }}
 								</div>
 								<div class="col-xs-12">
-										<coin-infos currencie="{{currencie}}" display="1111111"/>
+										<coin-infos1 currencie="{{currencie}}" />
 								</div>
 						</div>
 				</div>
