--- a/pages/fieldsetListCurrencies.html
+++ b/pages/fieldsetListCurrencies.html
@@ -12,7 +12,7 @@
 			<div class="col-xs-12" ng-show="optionDetails>1"><hr/></div>
 			
 			<div class="col-xs-12" ng-show="optionDetails>1">
-				<coin-infos currencie="{{currencie}}" />
+				<coin-infos2 currencie="{{currencie}}" />
 			</div>
 
 	</div>	
